src/style.css
@font-face {
  font-family: TwemojiMozilla;
  src: url("fonts/TwemojiMozilla.ttf") format("truetype");
}

@keyframes rainbow {

  0%,
  100% {
    color: #00800080;
  }

  10% {
    color: #000000bf;
  }

  20% {
    color: #ff000080;
  }

  30% {
    color: #80ffff80;
  }

  40% {
    color: #00ff0080;
  }

  50% {
    color: #ff008080;
  }

  60% {
    color: #8000ff80;
  }

  70% {
    color: #ff800080;
  }

  80% {
    color: #ffff0080;
  }

  90% {
    color: #0080ff80;
  }
}

* {
  outline: none !important;
}

::selection {
  background-color: var(--mdc-theme-primary);
  color: var(--mdc-theme-on-primary);
}

::-webkit-scrollbar {
  background: transparent;
  box-shadow: inset 1px 0 var(--bs-gray-300);
}

.table-responsive::-webkit-scrollbar {
  box-shadow: inset 0 0 0 1px var(--bs-gray-300);
}

::-webkit-scrollbar-thumb {
  background-color: rgba(128, 128, 128, .25);
  border-radius: 100px;
  border-color: transparent;
  border-style: solid;
  border-width: thick;
  background-clip: padding-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: rgba(128, 128, 128, .5);
}

::-webkit-scrollbar-thumb:active {
  background-color: rgb(128, 128, 128);
  border-width: initial;
}

body {
  height: 100vh;
}

#titleBar {
  z-index: 100;
}

.sticky-top {
  z-index: 10;
}

.form-group {
  margin-bottom: 1rem;
}

.input-group .iconify {
  font-size: 1rem;
}

.input-group .btn {
  background-color: #e9ecef;
  border: 1px solid #ced4da;
}

.input-group .form-control.is-invalid,
.input-group .form-select.is-invalid,
.was-validated .input-group .form-control:invalid,
.was-validated .input-group .form-select:invalid {
  z-index: auto;
}

.form-control[readonly]:enabled {
  background-color: initial;
}

.ts-wrapper.required:not(.focus, .has-items)>.ts-control,
select:required:not(:valid, :focus),
input:required:not(:valid, :focus, .mdc-text-field__input) {
  background-color: beige;
}

textarea {
  resize: none;
}

.rot-180 {
  transform: rotate(180deg);
}

.drag-area {
  flex: 1;
  -webkit-app-region: drag;
}

.window-action {
  display: flex;
  align-items: center;
  padding: 0.6rem 1rem;
  transition: var(--transition);
  background: none;
  border: 0;
}

.window-action--red:hover {
  background-color: var(--mdc-theme-error);
  color: var(--mdc-theme-on-error);
}

.window-action svg {
  fill: currentColor;
}

svg.maximize {
  border: 1px solid currentColor;
  width: 10px;
  height: 10px;
}

svg.restore path {
  d: path("m 2 0.00001 l 0 2 l -2 0 l 0 8 l 8 0 l 0 -2 l 2 0 l 0 -8 Z m 1 1 l 6 0 l 0 6 l -1 0 l 0 -5 l -5 0 Z m -2 2 l 6 0 l 0 6 l -6 0 Z");
}

#buttonDrawer,
#closeDocuments {
  padding: 0.25rem 0.75rem;
  display: flex;
  align-items: center;
  background: none;
  border: 0;
}

#buttonDrawer>span {
  transition: var(--transition);
}

#buttonDrawer .iconify,
#closeDocuments .iconify,
.mdc-deprecated-list--dense .mdc-deprecated-list-item__graphic,
.list-group-item .iconify:not(.avatar, .mdc-button__icon) {
  width: 1.5rem;
  height: auto;
}

.hide {
  padding: 0 !important;
  margin: 0 !important;
  opacity: 0 !important;
  border: 0 !important;
  user-select: none !important;
  pointer-events: none !important;
  overflow: hidden;
}

.hide:not(.overlay, .modal-body) {
  max-height: 0 !important;
  min-height: 0 !important;
  height: 0 !important;
}

.table {
  margin: 0;
  min-width: max-content;
}

.table-responsive {
  min-height: 6.1rem;
}

.panel-wide {
  max-width: 74vw;
}

tbody>tr {
  text-shadow: 0 0;
  transition: filter var(--transition);
  box-shadow: inset 0 -1px #000, inset 0 1px #000;
}

tbody>tr:last-child {
  box-shadow: inset 0 1px #000;
}

tbody>tr:first-child {
  box-shadow: inset 0 -1px #000;
}

tbody>tr:first-child:last-child {
  box-shadow: none;
}

#cases>tbody>tr.selected,
#cases>tbody>tr.selected:first-child:last-child {
  box-shadow: inset 0 0 0 4px #fff;
}

tbody>tr.selected,
tbody>tr.selected:first-child:last-child {
  box-shadow: inset 0 0 0 4px var(--mdc-theme-primary);
}

tbody>tr>td {
  max-width: 20rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

tbody>tr>td:not(:first-child) {
  border-left: 2px solid #000;
  box-shadow: inset 1px 0 transparent, inset -1px 0 transparent;
}

#cases>tbody>tr.selected>td {
  border-color: #fff;
  box-shadow: inset 1px 0 #fff, inset -1px 0 #fff;
}

tbody>tr.selected>td {
  border-color: var(--mdc-theme-primary);
  box-shadow: inset 1px 0 var(--mdc-theme-primary), inset -1px 0 var(--mdc-theme-primary);
}

tbody>tr>td.found {
  text-shadow: 0 0 20px currentColor;
  background-color: rgba(255, 255, 255, 0.5);
  font-weight: 500;
}

tbody.dimmed>tr:not(.not-dimmed)>td {
  border-color: rgb(0 0 0 / 25%);
}

th {
  background-color: var(--bs-light) !important;
  cursor: pointer;
  transition: opacity var(--transition);
  user-select: none;
}

th:active {
  cursor: grabbing;
}

.table th {
  position: sticky;
  top: 0;
}

.table th:not(:first-child) {
  border-left: 2px solid var(--bs-gray-500);
}

th>label {
  cursor: inherit;
}

.helper-text {
  height: 1rem;
  overflow: hidden;
  transition: var(--transition);
}

.helper-text>.iconify {
  font-size: .875rem;
  margin-right: .25rem;
}

.list-group:empty {
  display: none;
}

.list-group>th {
  cursor: grab;
  padding: .75rem 1.25rem;
}

.list-group>th:not(:first-child) {
  border-top: 2px solid var(--bs-gray-500);
}

.list-group>th:active {
  cursor: grabbing;
}

.list-group>th:first-child {
  border-top-left-radius: inherit;
  border-top-right-radius: inherit;
}

.list-group>th:last-child {
  border-bottom-left-radius: inherit;
  border-bottom-right-radius: inherit;
}

.list-group>th .iconify {
  display: none;
}

.list-group-flush:not(:empty) {
  border-radius: .5rem;
  border: 1px solid rgba(0, 0, 0, .125);
}

.sub-list-group {
  height: 5rem;
  width: 94%;
  overflow: hidden;
  will-change: height;
  transition: var(--transition);
}
/* ... */

